Spacing/Sizing/Background Colour
Changed spacing so that everything is centered and not at the very top of the browser screen.
Resized warning and controls pages to fit game area size. Adjusted recurring warning gif that came with this change.
Set background colour to be the same across all HTML pages so far.

--- a/Flat/Main/Src/warningCSS.css
+++ b/Flat/Main/Src/warningCSS.css
@@ -1,17 +1,23 @@
+html
+{
+    background-color:  #3c3c3c;
+}
 body
-{   width: 600px;
+{   width: 800px;
+    height: 600px;
     margin: 0 auto;
 }
 
 /*Styling for #container                                 */
 #canvas
 {
-border: 2px black solid;                                /*border colour for main container set to black               */
+    border: 2px black solid;                            /*border colour for main container set to black               */
                                                         /*border style for main container set to solid                */
                                                         /*border thickness for main container set to thick            */
-    border-radius: 25px;                                /*border radius set to 25 px                                  */
-    margin: 0 auto;                                       /*body position set to auto (centered)                        */
+/*    border-radius: 25px;  */                              /*border radius set to 25 px                                  */
+    margin: 0 auto;                                     /*body position set to auto (centered)                        */
 
     background-image: url("../images/warning.gif");
+    background-position: center;
 }
 
