--- a/Flat/Main/Src/controlsCSS.css
+++ b/Flat/Main/Src/controlsCSS.css
@@ -1,5 +1,10 @@
+html
+{
+    background-color:  #3c3c3c;
+}
 body
-{   width: 600px;
+{   width: 800px;
+    height: 600px;
     margin: 0 auto;
 }
 
