Integrated with Soyoung lvl + Fix
Fixed canvas sizing so that screen does not scroll when moving the player

--- a/Flat/0Main/Src/Main.css
+++ b/Flat/0Main/Src/Main.css
@@ -4,6 +4,13 @@ html
     background-color: #3c3c3c;
 }
 
+#holder
+{
+    width: 800px;
+    height: 772px;
+    margin: 0 auto;
+}
+
 #center
 
 {
