--- a/Flat/0Main/Src/Main.css
+++ b/Flat/0Main/Src/Main.css
@@ -4,20 +4,39 @@ html
     background-color: #3c3c3c;
 }
 
+#holder
+{
+    width: 800px;
+    height: 600px;
+    margin: 0 auto;
+}
+
 #center
 
 {
-    position: relative;
+    position: absolute;
     width: 800px;
     height: 600px;
     margin: 0 auto;
     border: 2px inset black;
 }
-canvas
+
+#HeloCanvas
 
 {
+    position: absolute;
+    left: 0;
+    right: 0;
+/*    border: black solid 2px;*/
+}
+
+#regular
+
+{
+    position: absolute;
+    left: 0;
+    right: 0;
     background: black;
     background-repeat: no-repeat;
     background-position-y: 135px;
-
 }
