--- a/Flat/0Main/Src/dialog.css
+++ b/Flat/0Main/Src/dialog.css
@@ -3,7 +3,7 @@
 {
     width: 800px;
     height: 162px;
-    margin: 4px auto;
+    /*margin: 4px auto;*/
     background-image: none;
 }
 
@@ -20,7 +20,7 @@
     margin-left: 160px;
     font-size: 25px;
     color : white;
-    margin-top:3px;
+    /*margin-top:3px;*/
 
 }
 
