--- a/Flat/0Main/Src/index.css
+++ b/Flat/0Main/Src/index.css
@@ -18,7 +18,7 @@ html
     width: 800px;
     height: 600px;
     margin: 0 auto;
-    border: 2px inset black;
+    /*border: 2px inset black;*/
 }
 
 #regular
