--- a/Flat/0Main/Src/dialog.css
+++ b/Flat/0Main/Src/dialog.css
@@ -1,10 +1,11 @@
 
 #dialog
 {
-    width: 800px;
+    width: 960px;
     height: 162px;
-    /*margin: 4px auto;*/
+    margin: 4px auto;
     background-image: none;
+    background-repeat: no-repeat;
 }
 
 #portrait
@@ -13,6 +14,7 @@
     height: 162px;
     position:absolute;
     background-image: none;
+    background-repeat: no-repeat;
 }
 
 #name
@@ -20,12 +22,12 @@
     margin-left: 160px;
     font-size: 25px;
     color : white;
-    /*margin-top:3px;*/
-
+    margin-top:3px;
 }
 
 #output
 {
+    width: 630px;
     margin-left: 160px;
     font-size: 20px;
     color : white;
