--- a/Flat/0Main/Src/healthInventory.css
+++ b/Flat/0Main/Src/healthInventory.css
@@ -3,9 +3,9 @@
 #statusInventory
 {
     width: 165px;
-    height: 800px;
+    height: 600px;
     position: absolute;
-    top: -6px;
+    /*top: -1px;*/
     left: 805px;
     background-image: url("../../0Main/images/healthInventory.png");
     background-repeat: no-repeat;
